# 7574-TP2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml  docker-compose2.yaml
informe/: informe.tex  structs.graphviz
informe/images/: DAG.gv
notebooks/: Explore dataset.ipynb  Reduce dataset.ipynb
rma/: cfg.py  cli.py  constants.py  exceptions.py  utils.py
rma/cli/: cli.py  filter.py  join.py  sink.py  source.py  transform.py  ventilate.py
rma/client/: cli.py
rma/dag/: dag.py  joiner.py  node.py  rma_dag.py  sink.py  source.py  ventilator.py  worker.py
rma/dataset/: cli.py
rma/tasks/: base.py  csv_source.py  executor.py  extract_post_id.py  filter_above_score.py  filter_columns.py  filter_ed_comments.py  filter_nan_sentiment.py  filter_null_url.py  filter_uniq_posts.py  filters.py  joiners.py  mean_sentiment.py  print_sink.py  score_mean.py  sinks.py  sources.py  transforms.py
tests/: test_deps.py  test_join.py  test_rma.py  test_simple_dag.py
tests/resources/: test1.csv  test2.csv
zmq_tests/delayed_client/: README.md  pub.py  sub1.py  sub2.py
zmq_tests/multpub/: README.md  pub1.py  pub2.py  sub1.py
