[tool.poetry]
name = "rma"
version = "2.4.0"
description = "Reddit Memes Analyzer, for fun (and passing Distribuidos I)."
authors = ["CrossNox <ijmermet@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typer = "^0.4.1"
youconfigme = "^0.6.15"
pyzmq = "22.3.0"
Cython = "^0.29.30"
mypy-extensions = "^0.4.3"
requests = "^2.27.1"
types-requests = "^2.27.27"
types-PyYAML = "^6.0.7"
graphviz = "^0.20"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.0"
seaborn = "^0.11.2"
requests = "^2.27.1"
pytest = "^7.1.2"
isort = "^5.10.1"
mypy = "^0.950"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
kaggle = "^1.5.12"
pyarrow = "^8.0.0"
pandas = "^1.4.2"

[tool.poetry.scripts]
rma_client = "rma.client.cli:app"
rma = "rma.cli.cli:app"
rma_dataset = "rma.dataset.cli:app"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[tool.isort]
line_length=88
indent='    '
multi_line_output=3
length_sort=true
use_parentheses=true
include_trailing_comma=true
force_sort_within_sections=true
known_first_party="rma"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
